added first Reset button

--- a/src/layouts.kv
+++ b/src/layouts.kv
@@ -35,3 +35,5 @@ MainPage:
             size_hint: 0.5, 0.1
             pos_hint: {'top': 1}
             text: "Click Me"
+            on_release:
+                self.parent.parent.start_demo()
